# rukkola

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
migration/: env.py
migration/versions/: 0901fa496d46_init.py  bc9d1c310c36_init.py
rukkola-rc/: Cargo.toml  pyproject.toml
rukkola-rc/src/: lib.rs
rukkola-web/: package.json
rukkola-web/server/: index.ts
rukkola-web/src/routes/: +page.svelte
rukkola-web/src/routes/api/num/: +server.ts
rukkola/src/: __init__.py
rukkola/src/adapter/repository/sqlalchemy/abc/: __init__.py  abc_sqlalchemy_repository.py
rukkola/src/adapter/repository/sqlalchemy/tx/: tx_sqlalchemy.py
rukkola/src/adapter/repository/sqlalchemy/user/: __init__.py  user_sqlalchemy_repository.py
rukkola/src/delivery/http/: __init__.py  abc_http.py  user_http.py
rukkola/src/domain/: __init__.py  base_model.py
rukkola/src/domain/user/: __init__.py  user_domain.py  user_model.py
rukkola/src/port/abc/: __init__.py  abc_port.py
rukkola/src/port/composer/: __init__.py
rukkola/src/port/di/: __init__.py  di_port.py
rukkola/src/port/service_composer/: __init__.py  service_composer_port.py
rukkola/src/port/storage/: __init__.py  tx.py  tx_port.py
rukkola/src/port/user/: __init__.py  user_port.py
rukkola/src/service/di/: __init__.py  di_service.py
rukkola/src/service/user/: user_service.py
