[project]
name = "rukkola"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "pydantic>=2.11.9",
    "rukkola-rc",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn>=0.37.0",
]

[tool.uv.workspace]
members = [
    "rukkola-rc",
]

[tool.uv.sources]
rukkola-rc = { workspace = true }
